-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.13.0-beta1
-
2bc4d82d31947717d6fe32a91197c82f65d1ba64 (qt-creator/qt-creator/master)
If I try to open a ui file with the current snapshot creators is crashing.
TextEditorFactoryPrivate::m_textEditorActionHandler == null in
TextEditorFactoryPrivate::createEditorHelper() at
qt-creator\src\plugins\texteditor\texteditor.cpp:8744
For Gerrit Dashboard: QTCREATORBUG-24241 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
305549,2 | Fix crash opening UI files | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |