Fix crash opening UI files

Add a null check, amending
aaa1376576ec3a87fd2e9b94c5c0a543b0f8819a.

Fixes: QTCREATORBUG-24241
Change-Id: I63e76b9d2dd10034b637f8f3cac5001b15b35d30
Reviewed-by: Robert Loehning <robert.loehning@qt.io>
Reviewed-by: David Schulz <david.schulz@qt.io>